--- a/GUI/WalletWPF/WalletWPF.csproj
+++ b/GUI/WalletWPF/WalletWPF.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Prism.Core" Version="8.0.0.1909" />
+  </ItemGroup>
+
 </Project>
