--- a/GUI/BudgetsWPF/BudgetsWPF.csproj
+++ b/GUI/BudgetsWPF/BudgetsWPF.csproj
@@ -29,6 +29,12 @@
     <Page Update="Authentication\SignUpView.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="Transactions\TransactionsView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Transactions\TransactionDetailsView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
   </ItemGroup>
 
 </Project>
